updates to events formatting

--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -84,7 +84,8 @@ h5,
 h6,
 p,
 ul,
-ol {
+ol,
+label {
   line-height: 1.4em;
   margin: .67em 0;
   }
@@ -226,6 +227,17 @@ input:focus, select:focus, textarea:focus /*, input[type=submit]:hover */ {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   }
+
+label {
+  font-weight: 600;
+}
+
+.btn-big {
+  padding: 0.5em 1em;
+  font-size: 1.1em;
+}
+
+
 
 /* =Flex Elements
 -------------------------------------------------------------- */
@@ -555,7 +567,9 @@ cursor: default;
   font-size: 0.75em;
   color: #aaa;
 }
-
+.admin_heading {
+  margin-bottom: 0;
+}
 
 /* =Full Size
 -------------------------------------------------------------- */
