--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -99,8 +99,17 @@
   </div>
 </div>
 
+<div class='row'>
+  <div class="col-xs-5  col-xs-offset-1 col-sm-6 col-sm-offset-0">
   <div class="actions">
-    <%= f.submit :data => { :disable_with => "Submitting..." } %>
+    <%= f.submit :data => { :disable_with => "Submitting..." },:class => "btn-default btn btn-big btn-primary" %>
   </div>
+  </div>
+
+  <div class="col-xs-5 col-sm-6">
+    <%= button_to 'Delete Event', @event, :confirm => 'Are you sure?', :method => :delete,:class => "btn-default btn btn-big btn-danger"  %>
+  </div>
+</div>
+
 
 <% end %>
