--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,22 +6,23 @@
 <% if signed_in?%>
   <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin"} %>
     <div class="admin-section" >
-<div class='row'>
-  <div class='col-sm-12'>
-      <h2>Admin</h2>
-      <p>You are seeing this admin area because you are logged in with admin privileges.</p>
       <div class='row'>
-        <div class="col-xs-12 col-sm-2">
-        <%= button_to 'New Event', new_event_path, method: :get, :class => "btn-default btn" %>
+        <div class='col-sm-12'>
+            <p class="admin_heading">Admin</p>
+            <p class="form_note admin_heading">You are seeing this admin area because you are logged in with admin privileges.</p>
+            <div class='row' style="padding-top:1em;">
+              <div class="col-xs-4">
+                <%= button_to 'New Event', new_event_path, method: :get, :class => "btn-default btn" %>
+              </div>
+              <div class="col-xs-4">
+                <%= button_to 'See All Events (History', all_events_path, method: :get, :class => "btn-default btn" %>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-xs-12 col-sm-2">
-        <%= button_to 'See All Events (History', all_events_path, method: :get, :class => "btn-default btn" %>
-  </div>
-  </div>
-  </div>
-  </div>
-</div> 
-<% end %><% end %>
+      </div> 
+    <% end %>
+<% end %>
 
 <h1>Devil Dog Calendar:</h1>
 
@@ -31,7 +32,7 @@
       <input type="text" class="text-input" id="filter" value="" />
       <span id="filter-count"></span>
   </fieldset>
-  <div class="form-tip">examples include: type like "airshow" or "meeting", state like "tx" </div>
+  <p class="form_note">examples include: type like "airshow" or "meeting", state like "tx" </p>
 </div>
 
 <% if !@events.blank? %>
