--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -58,19 +58,20 @@
 <% if signed_in?%>
   <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin"} %>
     <div class="admin-section" >
-<div class='row'>
-  <div class='col-sm-12'>
-      <h2>Admin</h2>
-      <p>You are seeing this admin area because you are logged in with admin privileges.</p>
       <div class='row'>
-        <div class="col-xs-12 col-sm-2">
-        <%= button_to 'Edit', edit_location_path(@location), method: :get, :class => "btn-default btn" %>
+        <div class='col-sm-12'>
+            <h2>Admin</h2>
+            <p>You are seeing this admin area because you are logged in with admin privileges.</p>
+            <div class='row'>
+              <div class="col-xs-12 col-sm-2">
+                <%= button_to 'Edit', edit_location_path(@location), method: :get, :class => "btn-default btn" %>
+              </div>
+              <div class="col-xs-12 col-sm-2">
+                <%= button_to 'Back', locations_path, method: :get, :class => "btn-default btn" %>
+              </div>
+            </div>
         </div>
-        <div class="col-xs-12 col-sm-2">
-        <%= button_to 'Back', locations_path, method: :get, :class => "btn-default btn" %>
-  </div>
-  </div>
-  </div>
-  </div>
-</div> 
-<% end %><% end %>
+      </div>
+    </div> 
+  <% end %>
+<% end %>
