--- a/app/views/members/_account_form.html.erb
+++ b/app/views/members/_account_form.html.erb
@@ -122,7 +122,7 @@
 </div>
 </div>
 <div class="actions" style="margin: 0 20em;">
-    <%= submit_tag  "Update Account", :name => "Update Account" %>
+    <%= f.submit  "Update Account", :data => { :disable_with => "Submitting Evaluation..." },:class => "btn-default btn btn-big btn-primary" %>
   </div>
 </div>
 
