--- a/app/views/members/_application_form.html.erb
+++ b/app/views/members/_application_form.html.erb
@@ -152,7 +152,7 @@ $(document).ready(function () {
 </div>    
     
   <div class="actions" style="text-align: center;">
-    <%= f.submit "Submit Application", :name => "Submit", :data => { :disable_with => "Submitting..." } %>
+    <%= f.submit "Submit Application", :name => "Submit", :data => { :disable_with => "Submitting..." }, :class => "btn-default btn btn-big btn-primary" %>
 
 
   </div>
