changed text on apllication notifier

--- a/app/views/member_application_notifier/created.html.erb
+++ b/app/views/member_application_notifier/created.html.erb
@@ -1,4 +1,4 @@
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Thank you for your interest in joining the Marshalling Detachment. The following Membership Application information has been recorded on the Marshalling Detachment website.</p>
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Thank you for your interest in joining the Devil Dog Squadron. The following Membership Application information has been recorded on the Devil Dog Squadron website.</p>
 
 <p style="font-size: 14pt; font-family: 'Helvetica Neue', Arial, sans-serif; color: #191919; font-weight: 200;">Contact Info</p>
 
@@ -40,8 +40,8 @@
 
 <p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">You will be contacted soon regarding your new membership.</p>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">For any additional questions, please contact Operations Officer Kathy Mizell at (###) ###-####.</p>
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">For any additional questions, please contact Operations Officer Beth Jenkins at (512) 869-1759.</p>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Marshalling Detachment</p>
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Devil Dog Squadron</p>
 
-<%= image_tag 'http://www.marshallingdetachment.org/assets/marshalling_detachment_logo.png' %>
+<%= image_tag 'https://www.devildogsquadron.com/assets/devildog_logo.gif' %>
