--- a/app/views/member_application_notifier/created.text.erb
+++ b/app/views/member_application_notifier/created.text.erb
@@ -1,4 +1,4 @@
-Thank you for your interest in joining the Marshalling Detachment. The following Membership Application information has been recorded on the Marshalling Detachment website.
+Thank you for your interest in joining the Devil Dog Squadron. The following Membership Application information has been recorded on the Devil Dog Squadron website.
 
 First name: <%= @member.first_name %>
 Last name:<%= @member.last_name %>
@@ -22,6 +22,6 @@ CAF Col No: <%= @member.caf_col_no %>
 
 You will be contacted soon regarding your new membership.
 
-For any additional questions, please contact Operations Officer Kathy Mizell at (###) ###-####.
+For any additional questions, please contact Operations Officer Beth Jenkins at (512) 869-1759.
 
-Marshalling Detachment
+Devil Dog Squadron
