--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -77,7 +77,7 @@
 
 <div class="row">
   <div class="col-sm-7">
-    <% if @event.event_statuses_id == 2 %> <span class="error" style="display: inline;"><strong>--Tentative</strong></span><% end %>
+    <% if @event.event_statuses_id == 2 %> <div class="event-flag">Tentative</div><% end %>
     <p><b>What:</b> <%= @event.event_type.title%></p>
 
     <p><b>When:</b>
