added signups to index page, formatting updates

--- a/app/views/event_signups/_form.html.erb
+++ b/app/views/event_signups/_form.html.erb
@@ -44,7 +44,7 @@
 <%= f.hidden_field :position, :value => 0 %>
 
   <div class="actions">
-    <%= f.submit :data => { :disable_with => "Submitting..." } %>
+    <%= f.submit :data => { :disable_with => "Submitting..." },:class => "btn-default btn btn-big btn-primary" %>
   </div>
 
 <% end %>
