--- a/app/views/event_signups/hold_harmless.html.erb
+++ b/app/views/event_signups/hold_harmless.html.erb
@@ -1,5 +1,5 @@
 <% empty_rows = 10 - @event_signups.size %>
-
+<div style = "background: #fff;border: 1px solid red;">
 <article id="hold-harmless">
 <p class="hh-rev">RV.3/19/14 8:52 AM</p>
 
@@ -63,3 +63,4 @@ UNIT NOTES _____________________________________________________________________
 
 </table>
 </article>
+</div>
