--- a/app/views/pages/member_home.html.erb
+++ b/app/views/pages/member_home.html.erb
@@ -35,7 +35,7 @@ No upcoming trips currently scheduled.
 
 <div class="calendar_row">
 <div class='row'>
-<div class="col-xs-12 col-sm-4">
+<div class="col-xs-12 col-sm-5 col-md-4">
 <div class='row'>
   <% if sign_up.event.start.strftime("%b %d" ) == sign_up.event.end.strftime("%b %d") %>
 <div class="col-xs-12">
@@ -95,7 +95,7 @@ No upcoming trips currently scheduled.
 </div>
 </div>
 </div>
-  <div class="col-xs-12 col-sm-8">
+  <div class="col-xs-12 col-sm-7 col-md-8">
     <h3 class="event-title"><em><%= link_to sign_up.event.title, sign_up.event %></em></h3>
     <% if sign_up.event.event_statuses_id == 2 %>
       <span class="event-flag" style="display: inline;"> &lt;= Tentative</span>
