--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -161,7 +161,13 @@ border-color: #775B02;
   text-transform: uppercase;
 }
 
+li.dropdown a {
+  padding: 1.5em;
+}
 
+ul.dropdown-menu li a {
+  padding: 1em;
+}
 /* =Footer
 -------------------------------------------------------------- */
 
@@ -597,6 +603,14 @@ cursor: default;
 
 .header_logo {
   width: 200px;
+}
+
+li.dropdown a {
+  padding: 0.75em 1em;
+}
+
+ul.dropdown-menu li a {
+  padding: 0.75em 1em;
 }
 
 /* =Flex Elements
