--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,6 @@
 <% email_addresses = "" %>
 
-<% map_url = "https://maps.googleapis.com/maps/api/staticmap?center="+@event.location.latitude+","+@event.location.longitude+"&zoom=11&size=400x400&maptype=roadmap
-&markers=color:red%7Clabel:1%7C"+@event.location.latitude+","+@event.location.longitude+"&key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig" %>
-
-<%# "&key=AIzaSyB7VXiMl6JcYSuuF6XreGXm9Wge3IssPO4 %>
+<% map_url = "https://maps.googleapis.com/maps/api/staticmap?center="+@event.location.latitude+","+@event.location.longitude+"&zoom=11&size=400x400&maptype=roadmap&markers=color:red%7Clabel:1%7C"+@event.location.latitude+","+@event.location.longitude+"&key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig" %>
 
 <%= link_to 'Back to Calendar', events_path %>
 
