--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -127,7 +127,7 @@
   <div class="col-sm-5">
   <% if @event.location.latitude? %>
     <div class="map-image">
-    <%= link_to image_tag(map_url, :alt => "map"), raw("https://www.google.com/maps/place/" + @event.location.latitude + ' ' + @event.location.longitude + "/@" + @event.location.latitude + "," + @event.location.longitude + ",13z/"), :target => "_blank" %>
+    <%= link_to image_tag("https://maps.googleapis.com/maps/api/staticmap?center="+@event.location.latitude+","+@event.location.longitude+"&zoom=11&size=400x400&maptype=roadmap&markers=color:red%7Clabel:1%7C"+@event.location.latitude+","+@event.location.longitude+"&key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig", :alt => "map"), raw("https://www.google.com/maps/place/" + @event.location.latitude + ' ' + @event.location.longitude + "/@" + @event.location.latitude + "," + @event.location.longitude + ",13z/"), :target => "_blank" %>
 
     </div>
   <% end %>
